--- a/Projet/.project
+++ b/Projet/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TP10-WEB-EJB-PC-EPC-E-solution</name>
+	<name>Projet</name>
 	<comment></comment>
 	<projects>
 	</projects>
